[package]
name = "bigmoe"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.12.1", features = ["default"] }
bevy_framepace = "0.14.1"
time = "0.3.30"
leafwing-input-manager = { version = "0.11.2", features = ["default"] }
bevy_kira_audio = { version = "0.18.0", features = ["default", "flac", "mp3", "wav"] }
